20231023台藝廚房作業

--- a/index.html
+++ b/index.html
@@ -4,8 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
-    helloworld
+    <header class="header">
+      <div class="contact-info">
+        <span class="material-symbols-outlined">call</span>(02)22722181
+        <span class="material-symbols-outlined">mail</span>yummy@bistrobliss
+        <a href="#"></a> <img src="./img/social_icon.png" height="30px" />
+      </div>
+
+      <nav class="navigation">
+        <div class="logo">
+          <a href="#"></a> <img src="./img/NTUAkitchenlogo.png" width="350px" />
+        </div>
+        <div class="menu">
+          <ul>
+            <a href="#">首頁</a>
+          </ul>
+          <ul>
+            <a href="#">關於我們</a>
+          </ul>
+          <ul>
+            <a href="#">作品介紹</a>
+          </ul>
+          <ul>
+            <a href="#">聯絡我們</a>
+          </ul>
+        </div>
+        <div class="reserve-button">
+          <button class="reserve">預訂時段</button>
+        </div>
+      </nav>
+    </header>
+    <div class="content">
+      <br /><br /><br /><br /><br /><br />
+      <h1 class="title1">台藝廚房</h1>
+      <br /><br />
+      <h2 class="title2">快來發現各種浮洲美食吧</h2>
+      <br /><br />
+      <button class="quick-reserve">快速預定</button>
+      <button class="see-menu">餐點瀏覽</button>
+    </div>
   </body>
 </html>
